# CMakeCodeField

./: README.md
CMakeCodeFiled/AxialMachineSolver/: CMakeLists.txt
CMakeCodeFiled/AxialMachineSolver/include/: Solver.h  Stage.h  Station.h  Stator.h  Vaned.h
CMakeCodeFiled/AxialMachineSolver/src/: Solver.cpp
CMakeCodeFiled/ProjectContents/: CMakeLists.txt
CMakeCodeFiled/ProjectContents/Include/: IncludeFile.h
CMakeCodeFiled/ProjectContents/src/: SourceFile.cpp
VSCode配置/: VsCodeCpp环境配置.pptx
VSCode配置/别人的配置/: launch.json
VSCode配置/我的配置/: hotkey.txt  settings.json  tasks.json
